@@ -139,7 +139,6 @@ wchar_t *filenameToWchar(const SEXP fn, const Rboolean expand)
     static wchar_t filename[PATH_MAX+1];
     void *obj;
     const char *from = "", *inbuf;
-    char cpx[7];
     char *outbuf;
     size_t inb, outb, res;
 
@@ -147,7 +146,6 @@ wchar_t *filenameToWchar(const SEXP fn, const Rboolean expand)
 	wcscpy(filename, L"");
 	return filename;
     }
-    if(localeCP > 0) {snprintf(cpx, 7, "CP%d", localeCP);  from = cpx;}
     if(IS_LATIN1(fn)) from = "latin1";
     if(IS_UTF8(fn)) from = "UTF-8";
     obj = Riconv_open("UCS-2LE", from);
@@ -665,16 +663,17 @@ void * Riconv_open (const char* tocode, const char* fromcode)
 #if defined Win32 || __APPLE__
     const char *cp = "UTF-8";
 # ifdef Win32
-#  ifndef SUPPORT_UTF8_WIN32
-    cp = locale2charset(NULL);
+#  ifndef SUPPORT_UTF8_WIN32 /* Always, at present */
+    char to[20] = "";
+    if (localeCP > 0) {snprintf(to, 20, "CP%d", localeCP); cp = to;}
 #  endif
 # else /* __APPLE__ */
     if (latin1locale) cp = "ISO-8859-1";
     else if (!utf8locale) cp = locale2charset(NULL);
 # endif
     if (!*tocode && !*fromcode) return iconv_open(cp, cp);
-    if(strcmp(tocode, "") == 0)  return iconv_open(cp, fromcode);
-    else if(strcmp(fromcode, "") == 0) return iconv_open(tocode, cp);
+    if(!*tocode)  return iconv_open(cp, fromcode);
+    else if(!*fromcode) return iconv_open(tocode, cp);
     else return iconv_open(tocode, fromcode);
 #else
     return iconv_open(tocode, fromcode);
@@ -905,10 +904,7 @@ const wchar_t *wtransChar(SEXP x)
 	    obj = utf8_wobj;
 	knownEnc = TRUE;
     } else {
-	/* This gets used in reading environment variables early on */
-	char to[7] = "";
-	if (localeCP > 0) snprintf(to, 7, "CP%d", localeCP);
-	obj = Riconv_open("UCS-2LE", to);
+	obj = Riconv_open("UCS-2LE", "");
 	if(obj == (void *)(-1))
 	    error("unsupported conversion to '%s' from codepage %d",
 		  "UCS-2LE", localeCP);
